Add logical laws and set wrapper

--- a/homework/common.sty
+++ b/homework/common.sty
@@ -18,7 +18,7 @@
 \newcommand*\Absorptive[1][]{\@Law{Absorptive}{#1}}
 \newcommand*\Associative[1][]{\@Law{Associative}{#1}}
 \newcommand*\Commutative[1][]{\@Law{Commutative}{#1}}
-\newcommand*\Contradiction[1][]{\@Law{Contradiction}{#1}}
+\newcommand*\Negation[1][]{\@Law{Negation}{#1}}
 \newcommand*\Contrapositive[1][]{\@Law{Contrapositive}{#1}}
 \newcommand*\DeMorgan[1][]{\@Law{De~Morgan's Law}{#1}}
 \newcommand*\Distributive[1][]{\@Law{Distributive}{#1}}
