Add bracketing command; housekeeping

--- a/homework/common.sty
+++ b/homework/common.sty
@@ -1,6 +1,6 @@
 % Random common macros.
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{common}[2020/10/31 Common macros.]
+\ProvidesPackage{common}[2020-11-15 Common macros]
 
 \newcommand*{\para}[1]{\emph{#1}\enspace}
 
