--- a/homework/homework.cls
+++ b/homework/homework.cls
@@ -1,7 +1,7 @@
 % Homework LaTeX class. Inherits from `article`.
 % (c) 2020 Ethan Wu CC BY-SA 4.0
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{homework}[2020-11-19 Basic Homework Class]
+\ProvidesClass{homework}[2020-12-01 Basic Homework Class]
 
 %%% conditionals %%%
 \RequirePackage{xifthen}
@@ -160,6 +160,7 @@
             \RequirePackage{vowel}%
             \newcommand*{\rom}[1]{\emph{#1}}%
             \newcommand*{\eng}[1]{`#1'}%
+            \newcommand*{\tlpair}[2]{\rom{#1}~\eng{#2}}%
             \newcommand*{\@transcription}[3]{\textup{\nohyphens{#1#2#3}}}%
             \newcommand*{\wipa}[1]{\@transcription{/}{#1}{/}}%
             \newcommand*{\nipa}[1]{\@transcription{[}{#1}{]}}%
