--- a/homework/common.sty
+++ b/homework/common.sty
@@ -1,12 +1,12 @@
 % Random common macros.
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{common}[2020-11-15 Common macros]
+\ProvidesPackage{common}[2020-11-16 Common macros]
 
 \newcommand*{\para}[1]{\emph{#1}\enspace}
 
 \RequirePackage{textcase}
 % `emph` style small caps
-\newcommand{\impt}[1]{\textsc{\MakeTextLowercase{#1}}}
+\newcommand{\impt}[1]{\textsc{\MakeTextLowercase{\oldstylenums{#1}}}}
 
 \RequirePackage{titlesec}
 % replace `paragraph` and `subparagraph` bold with italics
