update `lunwen` and add `linkup`

--- a/paper/lunwen.cls
+++ b/paper/lunwen.cls
@@ -9,8 +9,12 @@
     \booltrue{lunwen:word}%
     \PassOptionsToClass{12pt}{article}%
 }
-% Load bibliography packages.
-\newbool{lunwen:bib}\DeclareOption{bib}{\booltrue{lunwen:bib}}
+    % Microsoft Word style with double-spacing.
+    \newbool{lunwen:word:double}\DeclareOption{wordbl}{\booltrue{lunwen:word:double}}
+    % Basic headings for Microsoft Word style.
+    \newbool{lunwen:word:basic}\DeclareOption{wordbasic}{\booltrue{lunwen:word:basic}}
+    % Whether to force the Times New Roman/Arial/Courier New combo.
+    \newbool{lunwen:word:fonts}\DeclareOption{wordfonts}{\booltrue{lunwen:word:fonts}}
 % Load table packages.
 \newbool{lunwen:tab}\DeclareOption{tab}{\booltrue{lunwen:tab}}
 % Load reference packages.
@@ -22,19 +26,62 @@
 % Superclass article.
 \LoadClass{article}
 
-% Font settings.
-\RequirePackage{fontspec}
-\RequirePackage{microtype}
+% Set font settings according to engine.
+\RequirePackage{iftex}
+\ifPDFTeX
+    \RequirePackage[utf8]{inputenc}
+    \RequirePackage[T1]{fontenc}
+    \RequirePackage{lmodern}
+\else
+    \ifXeTeX
+        \RequirePackage{fontspec}
+    \else
+        \RequirePackage{luatextra}
+    \fi
+    \defaultfontfeatures{Ligatures=TeX}
+\fi
 
+% Typographic adjustments.
+\RequirePackage{microtype}
+% Page layout.
 \RequirePackage{geometry}
+% Restore default page layout.
+\Gm@restore@org
 
 \ifbool{lunwen:word}{%
     % Microsoft Word style.
 
+    % Adjust line spacing.
+    \RequirePackage{setspace}
+
     % Use Microsoft Word fonts.
-    \setmainfont{Times New Roman}%
-    \setsansfont{Helvetica}%
-    \setmonofont{Courier New}%
+    \ifPDFTeX\else
+    \IfFontExistsTF{Times Roman}{
+        \setmainfont{Times Roman}
+        \setromanfont{Times Roman}
+    }{
+        \setmainfont{Times New Roman}
+        \setromanfont{Times New Roman}
+    }
+    \ifbool{lunwen:word:fonts}{
+        % Just use Arial and Courier New.
+        \setsansfont{Arial}
+        \setmonofont{Courier New}
+    }{
+        % Replace Arial with Helvetica.
+        \IfFontExistsTF{Helvetica}{
+            \setsansfont{Helvetica}
+        }{
+            \setsansfont{Arial}
+        }
+        % Replace Courier New with Courier Prime.
+        \IfFontExistsTF{Courier Prime}{
+            \setmonofont{Courier Prime}
+        }{
+            \setmonofont{Courier New}
+        }
+    }
+    \fi
 
     % Set the margins to 1 inch.
     \geometry{margin=1in}
@@ -52,26 +99,30 @@
     % Remove the built-in maketitle vertical spacing.%
     \setlength{\droptitle}{-2em}%
     % Flush entire title block to the left.%
-    \renewcommand{\maketitlehooka}{\flushleft}%
+    \renewcommand{\maketitlehooka}{\flushleft\ifbool{lunwen:word:double}{\singlespacing}{}}%
     \renewcommand{\maketitlehookd}{\endflushleft\vskip-1.5em}%
 
-    % Include commands for setting line spacing.
-    \RequirePackage{setspace}
+    \ifbool{lunwen:word:double}{%
+        % Set line spacing to "double spacing".
+        \setstretch{2.33}}{}
 
     % Style headings.
 
     % Style section headers.
     \RequirePackage{titlesec}%
-    \titleformat*{\section}{\LARGE\sffamily\bfseries}%
+    \titleformat*{\section}{\ifbool{lunwen:word:basic}{\normalsize}{\LARGE}\sffamily\bfseries}%
     \titlespacing*{\section}{\z@}{*1}{*0.5}%
-    \titleformat*{\subsection}{\Large\sffamily\bfseries\itshape}%
+    \titleformat*{\subsection}{\ifbool{lunwen:word:basic}{\normalsize}{\Large}\sffamily\bfseries\itshape}%
     \titlespacing*{\subsection}{\z@}{*1}{*0.5}%
-    \titleformat*{\subsubsection}{\Large\sffamily\bfseries\itshape}%
+    \titleformat*{\subsubsection}{\ifbool{lunwen:word:basic}{\normalsize}{\Large}\sffamily\bfseries\itshape}%
     \titlespacing*{\subsubsection}{\z@}{*1}{*0.5}%
     \titleformat*{\paragraph}{\normalsize\sffamily\itshape}%
     \titlespacing*{\paragraph}{\z@}{*1}{*0.5}%
     \titleformat*{\subparagraph}{\normalsize\sffamily\itshape}%
     \titlespacing*{\subparagraph}{\parindent}{*1}{*0.5}%
+
+    % Use half-inch paragraph indents.
+    \setlength{\parindent}{0.5in}
 }{}
 
 \ifbool{lunwen:tab}{%
@@ -79,24 +130,6 @@
 
     % Table formatting.
     \RequirePackage{booktabs}%
-}{}
-\ifbool{lunwen:bib}{%
-    % Provide bibliography packages.
-
-    % Chicago author-date citations.
-    \RequirePackage[authordate]{biblatex-chicago}%
-}{}
-
-\ifbool{lunwen:ref}{
-    % Provide reference linking packages.
-
-    % Hyperlink references.
-    \RequirePackage{hyperref}
-    \hypersetup{%
-        % Small-caps links.
-        frenchlinks=true%
-    }
-    \RequirePackage{cleveref}
 }{}
 
 \endinput
